@@ -85,6 +85,8 @@ Core
 
 * Avoid multiple identical cookies (#150).
 
+* Job server displays catalog and job name in $0.
+
 UserTag
 -------
 
